# Advanced-Computer-Graphics

./: .gitignore  CMakeLists.txt  readme.md  run_all.sh
include/: bezier.hpp  beziersurface.hpp  bmp.hpp  camera.hpp  group.hpp  hit.hpp  kdtree.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ray.hpp  render_ppm.hpp  render_pt.hpp  scene_parser.hpp  sphere.hpp  transform.hpp  triangle.hpp
src/: image.cpp  main.cpp  mesh.cpp  scene_parser.cpp
testcases/: scene copy.txt  scene.txt  scene01_basic.txt  scene09_norm.txt  scene12_cylinder_ffd.txt
